Add markdown support

--- a/templates/write.html
+++ b/templates/write.html
@@ -1,32 +1,28 @@
-{{ define "write" }}
-
-{{ template "header" }}
-
 <div class="row">
+	{{ if .ID }}
+	<div class="col-xs-2">
+			<a href="/delete/{{.ID}}">Delete</a>
+	</div>
+	{{ end }}
 	<div class="col-xs-4">
 	</div>
 	<div class="col-xs-4">
 		<form role="form" method="POST" action="/SavePost">
-			<input type="hidden" name="id" value="{{.Id}}" />
+			<input type="hidden" name="id" value="{{.ID}}" />
 			<div class="form-group">
 				<label>Title</label>
 				<input type="text" class="form-control" id="title" name="title" value="{{.Title}}"  />
 			</div>
 			<div class="form-group">
 				<label>Content</label>
-				<textarea id="content" name="content">{{.Content}}</textarea>
+				<textarea id="content" name="content">{{.ContentMarkdown}}</textarea>
 			</div>
 			<button type="submit" class="btn btn-default">Submit</button>
 		</form>
-
 	</div>
-	<div class="col-xs-4">
-		{{ if .Id }}
-			<a href="/delete?id={{.Id}}">Delete</a>
-		{{ end }}
+	<div class="col-xs-6" id="md_html">
+		{{.ContentHTML}}
 	</div>
 </div>
 
-{{ template "footer" }}
-
-{{ end }}
+<script type="text/javascript" src="/assets/js/write.js"></script>
