--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,3 @@
-{{ define "header" }}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -45,4 +44,9 @@
     </div>
 </div>
 
-{{ end }}
+{{ yield }}
+
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="assets/js/bootstrap.min.js"></script>
+</body>
+</html>
